--- a/src/components/Projects/ProjectPage.css
+++ b/src/components/Projects/ProjectPage.css
@@ -7,15 +7,6 @@
   margin: auto;
 }
 
-/* .project-img-container img {
-  max-width: 430px;
-  height: 350px;
-  object-fit: cover;
-} */
-
-.project-img-container {
-  display: flex;
-}
 
 .project-info {
   display: flex;
@@ -134,6 +125,13 @@
   .fundingProgress p  {
     line-height: 2;
   }
+
+  .project-img-container img {
+    object-fit: cover;
+    height: 450px;
+    max-width: 800px;
+  }
+
   .rock-image {
     max-width: 100%;
     object-fit: cover;
